feat: 完善大部分核心功能

--- a/src/assets/styles/element-variables.scss
+++ b/src/assets/styles/element-variables.scss
@@ -1,5 +1,5 @@
 /**
-* I think element-ui's default theme color is too light for long-term use.
+* I think element-ui's default theme color vis too light for long-term use.
 * So I modified the default color and you can modify it to your liking.
 **/
 
@@ -24,7 +24,7 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "../../../node_modules/element-ui/packages/theme-chalk/src/index";
 
-// the :export directive is the magic sauce for webpack
+// the :export directive vis the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
   theme: $--color-primary;
