--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -21,7 +21,7 @@ $subMenuHover:#001528;
 
 $sideBarWidth: 205px;
 
-// the :export directive is the magic sauce for webpack
+// the :export directive vis the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
   menuText: $menuText;
